# Yamete-Kudasai

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  yamete-kudasai.h
.github/workflows/: release.yml
docs/: index.html  sounds.json  style.css
src/: app.rs  lib.rs  main.rs
src/platform/: mod.rs  unix.rs  windows.rs
