[package]
name = "yamete-kudasai-system"
version = "0.1.0"
edition = "2021"

[lib]
name = "yamete_kudasai_player"
path = "src/lib.rs"

[dependencies]
dirs = "6.0.0"
fs2 = "0.4.3"
regex = "1.12.2"
rodio = { version = "0.21.1", features = ["mp3"] }
ureq = "3"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
